* attach() renamed to persist()
* separate indices per domain class
* support for fulltext indices
* fixed direct lookup of numerically indexed values
* relationships via relateTo are now also restricted to one per type,direction and target
* added EntityPath/EntityPathMapper for entity based Neo4jTemplate callbacks
* added EntityEvaluator for entity based path evaluation
* error handling for node type strategy called on non type nodes
* FieldTraversalDescriptionBuilder build method parametrization

Changes in version 1.0.0.M3 (2011-02-25)
----------------------------------------

* update to Neo4j-1.3.M03, AspectJ 1.6.11.M2
* added explicit support for detachable entities
* added bean validation support for property changes
* added external transaction manager support (XA and one phase commit best effort)
* added xml namespace configuration
* simplified Spring Java Config configuration class
* added automatic numerical indexing and range queries
* added full featured Neo4jTemplate
* all methods introduced to entities are now generified


Changes in version 1.0.0.M2 (2011-01-31)
----------------------------------------

General
* Improved indexing support - full, named index support for nodes and relationships
* Now supporting removal of node and relationship entities
* Added strict type checking on entity instantiation from framework methods (according to type strategy)
* Added support for dynamic projection to arbitrary graph entities
* Updated dependency to Neo4j 1.2


Changes in version 1.0.0.M1 (2010-12-24)
----------------------------------------

General
* Simplified annotation driven programming model for Neo4j applications
* Strategy to handle representation of java types in the graph
* AspectJ ITD backed field mapping for plain Java objects
* Annotations for graph persistence
* Support for building traversal descriptions
* Support for cross-store persistence including basic transaction support
* Abstract configuration class