@@ -37,7 +37,7 @@
 		method). Roo applications use this useful feature in a number of
 		areas, such as @PersistenceContext injection into entities.
 	-->
-	<context:spring-configured/>
+	<!--context:spring-configured/-->
 
 	<!--
 		This declaration will cause Spring to locate every @Component,
@@ -62,7 +62,7 @@
 	-->
 	<context:component-scan base-package="org.springframework.data.graph.neo4j">
 		<context:exclude-filter expression=".*_Roo_.*" type="regex"/>
-        <context:exclude-filter expression="org.springframework.data.graph.neo4j.config.Neo4jConfiguration" type="regex"/>
+        <context:exclude-filter expression="org.springframework.context.annotation.Configuration" type="annotation"/>
 		<context:exclude-filter expression="org.springframework.stereotype.Controller" type="annotation"/>
 	</context:component-scan>
 	
