@@ -16,6 +16,8 @@ Changes in version 1.0.0.M4 (2011-03-14)
 * added EntityEvaluator for entity based path evaluation
 * error handling for node type strategy called on non type nodes
 * FieldTraversalDescriptionBuilder build method parametrization
+* re-enabled cross-store persistence
+* removed the need to mark graph managed fields with @Transient for a cross store entity
 
 Changes in version 1.0.0.M3 (2011-02-25)
 ----------------------------------------
